products/devex-apollo/products/devex-apollo/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devex-apollo
  namespace: default
  labels:
    "app.kubernetes.io/name": "devex-apollo"
spec:
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/name": "devex-apollo"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": "devex-apollo"
    spec:
      containers:
        - image: devex-apollo:latest
          name: devex-apollo
          ports:
            - containerPort: 5000
