products/devex-apollo/products/devex-apollo/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: devex-apollo
  namespace: default
  labels:
    "app.kubernetes.io/name": "devex-apollo"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "devex-apollo"
