products/devex-apollo/products/devex-apollo/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devex-apollo
  namespace: default
  labels:
    "app.kubernetes.io/name": "devex-apollo"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test-devex-apollo.eks01uws2.stg.z7a.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex-apollo
                port:
                  number: 80
    - host: test-devex-apollo.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex-apollo
                port:
                  number: 80
